Bug 83048 - DOCX: Corrupt: File gets corrupt in footer.xml after Roundtrip
Summary: DOCX: Corrupt: File gets corrupt in footer.xml after Roundtrip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-25 09:07 UTC by pallavi.jadhav
Modified: 2015-04-07 21:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Footer contains SDT, FieldChar, SDT (29.05 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-08-25 09:07 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-08-25 09:07:38 UTC
Created attachment 105225 [details]
Footer contains SDT, FieldChar, SDT

Steps to reproduce:
1] Open attached document in LO
2] Perform save_as to DOCX
3] Open saved file in MS Office 2010

Current behavior:
File gets corrupt after RT.

Expected behavior:
File should get open in MS Office 2010 without corruption.

Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 Commit Notification 2014-09-01 05:55:06 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61ed5a1f959a7903cfb56dc293dcc511ea28d15e

fdo#83048: DOCX: Corrupt: LO exports  wrong SDT properties of Date



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Jorendc 2014-09-01 08:27:54 UTC
Fix applied + Unit test -> RESOLVED FIXED