fdo#83048: DOCX: Corrupt: LO exports  wrong SDT properties of Date

Issue :
	-File was getting corrupt due to wrong SDT Properties were getting export
 	 and only one SDT tag was getting written.
	-Issue file contained a Date SDT and a FieldChar SDT(Page numbers)
	-Issue was at Import side.
 	 LO GRAB BAGS Properties of SDT using PARA_GRAB_BAG or CHAR_GRAB_BAG
	-For Date SDT it should be grab bagged using CHAR_GRAB_BAG in order to get
         correct data inside <w:sdtPr>
 	 But LO was handling it with PARA_GRAB_BAG due to which wrong properties were
         getting written and
 	file was getting corrupt.

	Implementation :
	-Added a check for Date SDT to handle it through CHAR_GRAB_BAG
	-Now correct SDT properties are getting exported due to which Date is getting
         written inside an SDT tag.
	-Added UT at export side.

Change-Id: Ibcfb6dbbec1c23ffd14ba924ab56dc4122b98595